[package]
name = "sabnode-api"
version = "0.1.0"
edition = "2024"
description = "SabNode HTTP API binary (Phase 0)."
license = "UNLICENSED"
publish = false

[[bin]]
name = "sabnode-api"
path = "src/main.rs"

[dependencies]
common = { package = "sabnode-common", path = "../common" }
sabnode-auth = { path = "../auth" }
sabnode-db = { path = "../db" }
sabnode-users = { path = "../users" }
sabnode-admin = { path = "../admin" }
sabnode-observability = { path = "../observability" }

wachat-webhook = { path = "../wachat-webhook" }
wachat-webhook-actions = { path = "../wachat-webhook-actions" }
wachat-webhook-config = { path = "../wachat-webhook-config" }
wachat-webhook-verify = { path = "../wachat-webhook-verify" }
wachat-webhook-status = { path = "../wachat-webhook-status" }
wachat-webhook-inbound = { path = "../wachat-webhook-inbound" }
wachat-webhook-account = { path = "../wachat-webhook-account" }
wachat-webhook-template-events = { path = "../wachat-webhook-template-events" }
wachat-webhook-dlq = { path = "../wachat-webhook-dlq" }
wachat-webhook-contacts = { path = "../wachat-webhook-contacts" }
wachat-webhook-conversations = { path = "../wachat-webhook-conversations" }
wachat-queue = { path = "../wachat-queue" }

wachat-templates = { path = "../wachat-templates" }
wachat-templates-mutate = { path = "../wachat-templates-mutate" }
wachat-templates-sync = { path = "../wachat-templates-sync" }
wachat-templates-categories = { path = "../wachat-templates-categories" }
wachat-templates-send = { path = "../wachat-templates-send" }
wachat-templates-router = { path = "../wachat-templates-router" }
wachat-templates-actions = { path = "../wachat-templates-actions" }
wachat-meta-client = { path = "../wachat-meta-client" }
wachat-media = { path = "../wachat-media" }

wachat-send = { path = "../wachat-send" }
wachat-send-cta = { path = "../wachat-send-cta" }
wachat-send-flows = { path = "../wachat-send-flows" }
wachat-send-orders = { path = "../wachat-send-orders" }
wachat-contacts-resolve = { path = "../wachat-contacts-resolve" }
wachat-chat-read = { path = "../wachat-chat-read" }
wachat-chat-mark = { path = "../wachat-chat-mark" }
wachat-payment-request = { path = "../wachat-payment-request" }
wachat-pay = { path = "../wachat-pay" }
wachat-broadcast = { path = "../wachat-broadcast" }
wachat-calling = { path = "../wachat-calling" }
wachat-features = { path = "../wachat-features" }
wachat-send-router = { path = "../wachat-send-router" }
wachat-public-api = { path = "../wachat-public-api" }
wachat-projects = { path = "../wachat-projects" }
wachat-contacts = { path = "../wachat-contacts" }
crm-lookup = { path = "../crm-lookup" }
crm-accounts = { path = "../crm-accounts" }
crm-pipelines = { path = "../crm-pipelines" }
crm-contacts = { path = "../crm-contacts" }
crm-items = { path = "../crm-items" }
crm-leads = { path = "../crm-leads" }
crm-deals = { path = "../crm-deals" }
sabcrm-records = { path = "../sabcrm-records" }
sabcrm-objects = { path = "../sabcrm-objects" }
sabcrm-activities = { path = "../sabcrm-activities" }
sabcrm-views = { path = "../sabcrm-views" }
sabcrm-roles = { path = "../sabcrm-roles" }
sabcrm-settings = { path = "../sabcrm-settings" }
sabcrm-workflows = { path = "../sabcrm-workflows" }
sabcrm-audit = { path = "../sabcrm-audit" }
sabcrm-invites = { path = "../sabcrm-invites" }
sabcrm-notifications = { path = "../sabcrm-notifications" }
sabcrm-favorites = { path = "../sabcrm-favorites" }
crm-quotations = { path = "../crm-quotations" }
crm-invoices = { path = "../crm-invoices" }
crm-sales-orders = { path = "../crm-sales-orders" }
crm-purchase-orders = { path = "../crm-purchase-orders" }
crm-payment-receipts = { path = "../crm-payment-receipts" }
crm-credit-notes = { path = "../crm-credit-notes" }
crm-debit-notes = { path = "../crm-debit-notes" }
crm-payouts = { path = "../crm-payouts" }
crm-tickets = { path = "../crm-tickets" }
crm-subscriptions = { path = "../crm-subscriptions" }
crm-bills = { path = "../crm-bills" }
crm-rfqs = { path = "../crm-rfqs" }
crm-vendors = { path = "../crm-vendors" }
crm-vendor-bids = { path = "../crm-vendor-bids" }
crm-grns = { path = "../crm-grns" }
crm-employees = { path = "../crm-employees" }
crm-attendance = { path = "../crm-attendance" }
crm-leaves = { path = "../crm-leaves" }
crm-payroll-runs = { path = "../crm-payroll-runs" }
crm-fixed-assets = { path = "../crm-fixed-assets" }
crm-bookings = { path = "../crm-bookings" }
crm-holidays = { path = "../crm-holidays" }
crm-departments = { path = "../crm-departments" }
crm-brands = { path = "../crm-brands" }
crm-tags = { path = "../crm-tags" }
crm-labels = { path = "../crm-labels" }
crm-branches = { path = "../crm-branches" }
crm-warehouses = { path = "../crm-warehouses" }
crm-stock-adjustments = { path = "../crm-stock-adjustments" }
crm-coupons = { path = "../crm-coupons" }
crm-gift-cards = { path = "../crm-gift-cards" }
crm-loyalty-programs = { path = "../crm-loyalty-programs" }
crm-budgets = { path = "../crm-budgets" }
crm-loans = { path = "../crm-loans" }
crm-petty-cash = { path = "../crm-petty-cash" }
crm-bom = { path = "../crm-bom" }
crm-production-orders = { path = "../crm-production-orders" }
crm-proforma-invoices = { path = "../crm-proforma-invoices" }
crm-delivery-challans = { path = "../crm-delivery-challans" }
crm-service-contracts = { path = "../crm-service-contracts" }
crm-tasks = { path = "../crm-tasks" }
crm-disciplinary = { path = "../crm-disciplinary" }
crm-vouchers = { path = "../crm-vouchers" }
crm-contracts = { path = "../crm-contracts" }
crm-awards = { path = "../crm-awards" }
crm-kb-articles = { path = "../crm-kb-articles" }
crm-payment-accounts = { path = "../crm-payment-accounts" }
crm-slas = { path = "../crm-slas" }
crm-exits = { path = "../crm-exits" }
crm-purchase-leads = { path = "../crm-purchase-leads" }
crm-automations = { path = "../crm-automations" }
crm-forms = { path = "../crm-forms" }
crm-saved-views = { path = "../crm-saved-views" }
crm-email-templates = { path = "../crm-email-templates" }
crm-portal-users = { path = "../crm-portal-users" }
crm-appraisals = { path = "../crm-appraisals" }
crm-succession = { path = "../crm-succession" }
crm-reconciliation = { path = "../crm-reconciliation" }
crm-payroll-settings = { path = "../crm-payroll-settings" }
crm-auto-leads = { path = "../crm-auto-leads" }
crm-project-tasks = { path = "../crm-project-tasks" }
crm-payslips = { path = "../crm-payslips" }
crm-salary-structures = { path = "../crm-salary-structures" }
crm-products = { path = "../crm-products" }
crm-goals = { path = "../crm-goals" }
crm-pt-slabs = { path = "../crm-pt-slabs" }
crm-chart-of-accounts = { path = "../crm-chart-of-accounts" }
crm-account-groups = { path = "../crm-account-groups" }
crm-dashboards = { path = "../crm-dashboards" }
crm-voucher-entries = { path = "../crm-voucher-entries" }
crm-form-submissions = { path = "../crm-form-submissions" }
crm-kpis = { path = "../crm-kpis" }
crm-industries = { path = "../crm-industries" }
crm-product-categories = { path = "../crm-product-categories" }
crm-settings = { path = "../crm-settings" }
crm-taxes = { path = "../crm-taxes" }
crm-units = { path = "../crm-units" }
crm-vendor-types = { path = "../crm-vendor-types" }
crm-purchases = { path = "../crm-purchases" }
crm-leave-requests = { path = "../crm-leave-requests" }
crm-subtasks = { path = "../crm-subtasks" }
crm-milestones = { path = "../crm-milestones" }
crm-issues = { path = "../crm-issues" }
crm-time-logs = { path = "../crm-time-logs" }
crm-ticket-tags = { path = "../crm-ticket-tags" }
crm-ticket-channels = { path = "../crm-ticket-channels" }
crm-reply-templates = { path = "../crm-reply-templates" }
crm-candidates = { path = "../crm-candidates" }
crm-jobs = { path = "../crm-jobs" }
crm-interviews = { path = "../crm-interviews" }
crm-offers = { path = "../crm-offers" }
crm-onboarding = { path = "../crm-onboarding" }
crm-assets = { path = "../crm-assets" }
crm-documents = { path = "../crm-documents" }
crm-training = { path = "../crm-training" }
crm-ticket-groups = { path = "../crm-ticket-groups" }
crm-ticket-types = { path = "../crm-ticket-types" }
crm-agent-groups = { path = "../crm-agent-groups" }
crm-shifts = { path = "../crm-shifts" }
crm-okrs = { path = "../crm-okrs" }
crm-policies = { path = "../crm-policies" }
crm-announcements = { path = "../crm-announcements" }
crm-events = { path = "../crm-events" }
crm-notices = { path = "../crm-notices" }
crm-currencies = { path = "../crm-currencies" }
crm-expense-categories = { path = "../crm-expense-categories" }
crm-custom-fields = { path = "../crm-custom-fields" }
crm-company-profile = { path = "../crm-company-profile" }
crm-shift-rotations = { path = "../crm-shift-rotations" }
crm-one-on-ones = { path = "../crm-one-on-ones" }
crm-project-categories = { path = "../crm-project-categories" }
crm-task-labels = { path = "../crm-task-labels" }
crm-taskboard-columns = { path = "../crm-taskboard-columns" }
wachat-flows = { path = "../wachat-flows" }
wachat-api-keys-admin = { path = "../wachat-api-keys-admin" }
wachat-facebook-pages = { path = "../wachat-facebook-pages" }
wachat-facebook-content = { path = "../wachat-facebook-content" }
wachat-facebook-messaging = { path = "../wachat-facebook-messaging" }
wachat-facebook-automation = { path = "../wachat-facebook-automation" }
wachat-facebook-crm = { path = "../wachat-facebook-crm" }
wachat-facebook-agents = { path = "../wachat-facebook-agents" }
wachat-facebook-business = { path = "../wachat-facebook-business" }
wachat-facebook-misc = { path = "../wachat-facebook-misc" }
wachat-facebook-comments = { path = "../wachat-facebook-comments" }
wachat-facebook-events = { path = "../wachat-facebook-events" }
wachat-facebook-lead-gen = { path = "../wachat-facebook-lead-gen" }
wachat-facebook-messenger-profile = { path = "../wachat-facebook-messenger-profile" }
wachat-instagram = { path = "../wachat-instagram" }
sabfiles = { path = "../sabfiles" }
telegram-bots = { path = "../telegram-bots" }
telegram-chats = { path = "../telegram-chats" }
telegram-broadcasts = { path = "../telegram-broadcasts" }
telegram-auto-reply = { path = "../telegram-auto-reply" }
telegram-commands = { path = "../telegram-commands" }
telegram-bot-profile = { path = "../telegram-bot-profile" }
telegram-channels = { path = "../telegram-channels" }
telegram-analytics = { path = "../telegram-analytics" }
telegram-payments = { path = "../telegram-payments" }
telegram-stickers = { path = "../telegram-stickers" }
telegram-stories = { path = "../telegram-stories" }
telegram-flows = { path = "../telegram-flows" }
telegram-mini-apps = { path = "../telegram-mini-apps" }
telegram-ads = { path = "../telegram-ads" }
telegram-api-credentials = { path = "../telegram-api-credentials" }
telegram-business-inbox = { path = "../telegram-business-inbox" }
telegram-contacts = { path = "../telegram-contacts" }
telegram-settings = { path = "../telegram-settings" }
telegram-webhooks = { path = "../telegram-webhooks" }
wachat-rate-limit = { path = "../wachat-rate-limit" }
wachat-config = { path = "../wachat-config" }
wachat-analytics = { path = "../wachat-analytics" }
meta-suite = { path = "../meta-suite" }
meta-token = { path = "../meta-token" }
meta-flows = { path = "../meta-flows" }
qr-codes = { path = "../qr-codes" }
url-shortener = { path = "../url-shortener" }
ad-manager = { path = "../ad-manager" }
facebook-flow = { path = "../facebook-flow" }
sabflow-engine = { path = "../sabflow-engine" }
sabflow-engine-runtime = { path = "../sabflow-engine-runtime" }

email-audience = { path = "../email-audience" }
email-templates = { path = "../email-templates" }
email-inbox = { path = "../email-inbox" }
email-inbound = { path = "../email-inbound" }
email-deliverability = { path = "../email-deliverability" }
email-api = { path = "../email-api" }
email-webhooks = { path = "../email-webhooks" }
email-campaigns = { path = "../email-campaigns" }
email-events = { path = "../email-events" }
email-reports = { path = "../email-reports" }
email-journeys = { path = "../email-journeys" }

# SabChat — omnichannel live-chat module (Pillar 1 + 2 foundation).
sabchat-types = { path = "../sabchat-types" }
sabchat-contacts = { path = "../sabchat-contacts" }
sabchat-conversations = { path = "../sabchat-conversations" }
sabchat-messages = { path = "../sabchat-messages" }
sabchat-inboxes = { path = "../sabchat-inboxes" }
sabchat-audit = { path = "../sabchat-audit" }
sabchat-routing = { path = "../sabchat-routing" }
sabchat-widget = { path = "../sabchat-widget" }
sabchat-ws = { path = "../sabchat-ws" }
sabchat-channel-whatsapp = { path = "../sabchat-channel-whatsapp" }
sabchat-channel-instagram = { path = "../sabchat-channel-instagram" }
sabchat-channel-facebook = { path = "../sabchat-channel-facebook" }
sabchat-channel-telegram = { path = "../sabchat-channel-telegram" }
sabchat-channel-email = { path = "../sabchat-channel-email" }
sabchat-channel-sms = { path = "../sabchat-channel-sms" }
sabchat-ai-copilot = { path = "../sabchat-ai-copilot" }
sabchat-ai-translate = { path = "../sabchat-ai-translate" }
sabchat-ai-sentiment = { path = "../sabchat-ai-sentiment" }
sabchat-ai-resolve-bot = { path = "../sabchat-ai-resolve-bot" }
sabchat-macros = { path = "../sabchat-macros" }
sabchat-sla = { path = "../sabchat-sla" }
sabchat-business-hours = { path = "../sabchat-business-hours" }
sabchat-crm-bridge = { path = "../sabchat-crm-bridge" }
sabchat-knowledge = { path = "../sabchat-knowledge" }
sabchat-commerce = { path = "../sabchat-commerce" }
sabchat-reports = { path = "../sabchat-reports" }
sabchat-teams = { path = "../sabchat-teams" }
sabchat-webhooks = { path = "../sabchat-webhooks" }
sabchat-public-api = { path = "../sabchat-public-api" }
sabchat-events = { path = "../sabchat-events" }
sabchat-voice = { path = "../sabchat-voice" }
sabchat-cobrowse = { path = "../sabchat-cobrowse" }
sabchat-shifts = { path = "../sabchat-shifts" }
sabchat-csat = { path = "../sabchat-csat" }
sabchat-dispositions = { path = "../sabchat-dispositions" }
sabchat-gamification = { path = "../sabchat-gamification" }
sabchat-compliance = { path = "../sabchat-compliance" }
sabchat-sso = { path = "../sabchat-sso" }
sabchat-ai-qa = { path = "../sabchat-ai-qa" }
sabchat-ai-voc = { path = "../sabchat-ai-voc" }
sabchat-sabflow-nodes = { path = "../sabchat-sabflow-nodes" }
sabchat-cart-recovery = { path = "../sabchat-cart-recovery" }
sabchat-ad-attribution = { path = "../sabchat-ad-attribution" }
sabchat-channel-line = { path = "../sabchat-channel-line" }
sabchat-channel-viber = { path = "../sabchat-channel-viber" }
sabchat-channel-apple = { path = "../sabchat-channel-apple" }
sabchat-channel-gbm = { path = "../sabchat-channel-gbm" }
sabchat-channel-x = { path = "../sabchat-channel-x" }
sabchat-marketplace = { path = "../sabchat-marketplace" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util", "timeout"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1.0"

sabbi-charts = { path = "../sabbi-charts" }
sabbi-dataset-joins = { path = "../sabbi-dataset-joins" }
sabbi-datasets = { path = "../sabbi-datasets" }
sabbi-embeds = { path = "../sabbi-embeds" }
sabbi-schedules = { path = "../sabbi-schedules" }
sabbi-workbooks = { path = "../sabbi-workbooks" }
sabbigin-config = { path = "../sabbigin-config" }
sabbugs-bugs = { path = "../sabbugs-bugs" }
sabbugs-comments = { path = "../sabbugs-comments" }
sabbugs-history = { path = "../sabbugs-history" }
sabbugs-saved-filters = { path = "../sabbugs-saved-filters" }
sabbugs-versions = { path = "../sabbugs-versions" }
sabconnect-comments = { path = "../sabconnect-comments" }
sabconnect-custom-apps = { path = "../sabconnect-custom-apps" }
sabconnect-feed = { path = "../sabconnect-feed" }
sabconnect-groups = { path = "../sabconnect-groups" }
sabconnect-manuals = { path = "../sabconnect-manuals" }
sabconnect-reactions = { path = "../sabconnect-reactions" }
sabmeet-dialins = { path = "../sabmeet-dialins" }
sabmeet-participants = { path = "../sabmeet-participants" }
sabmeet-polls = { path = "../sabmeet-polls" }
sabmeet-qna = { path = "../sabmeet-qna" }
sabmeet-recordings = { path = "../sabmeet-recordings" }
sabmeet-rooms = { path = "../sabmeet-rooms" }
sabprep-profiles = { path = "../sabprep-profiles" }
sabprep-recipes = { path = "../sabprep-recipes" }
sabprep-runs = { path = "../sabprep-runs" }
sabprep-steps = { path = "../sabprep-steps" }
sabrequests-blueprints = { path = "../sabrequests-blueprints" }
sabrequests-instances = { path = "../sabrequests-instances" }
sabrequests-orgcharts = { path = "../sabrequests-orgcharts" }
sabrequests-stage-actions = { path = "../sabrequests-stage-actions" }
sabrewards-catalog = { path = "../sabrewards-catalog" }
sabrewards-members = { path = "../sabrewards-members" }
sabrewards-programs = { path = "../sabrewards-programs" }
sabrewards-redemptions = { path = "../sabrewards-redemptions" }
sabrewards-referrals = { path = "../sabrewards-referrals" }
sabsense-form-analytics = { path = "../sabsense-form-analytics" }
sabsense-funnel-runs = { path = "../sabsense-funnel-runs" }
sabsense-funnels = { path = "../sabsense-funnels" }
sabsense-heatmap-events = { path = "../sabsense-heatmap-events" }
sabsense-heatmaps = { path = "../sabsense-heatmaps" }
sabsense-recordings = { path = "../sabsense-recordings" }
sabsense-sites = { path = "../sabsense-sites" }
sabsense-publishers = { path = "../sabsense-publishers" }
sabsense-apps = { path = "../sabsense-apps" }
sabsense-ad-units = { path = "../sabsense-ad-units" }
sabsense-placements = { path = "../sabsense-placements" }
sabsense-advertisers = { path = "../sabsense-advertisers" }
sabsense-campaigns = { path = "../sabsense-campaigns" }
sabsense-creatives = { path = "../sabsense-creatives" }
sabsense-targeting = { path = "../sabsense-targeting" }
sabsense-budgeting = { path = "../sabsense-budgeting" }
sabsense-payouts = { path = "../sabsense-payouts" }
sabsense-advertiser-billing = { path = "../sabsense-advertiser-billing" }
sabsense-revenue-share = { path = "../sabsense-revenue-share" }
sabsense-tax-forms = { path = "../sabsense-tax-forms" }
sabsense-bidding = { path = "../sabsense-bidding" }
sabsense-direct-deals = { path = "../sabsense-direct-deals" }
sabsense-floor-pricing = { path = "../sabsense-floor-pricing" }
sabsense-yield-mgmt = { path = "../sabsense-yield-mgmt" }
sabsense-native-ads = { path = "../sabsense-native-ads" }
sabsense-analytics = { path = "../sabsense-analytics" }
sabsense-fraud-detection = { path = "../sabsense-fraud-detection" }
sabsense-viewability = { path = "../sabsense-viewability" }
sabsense-consent-mgmt = { path = "../sabsense-consent-mgmt" }
sabsense-brand-safety = { path = "../sabsense-brand-safety" }
sabshop-carts = { path = "../sabshop-carts" }
sabshop-checkouts = { path = "../sabshop-checkouts" }
sabshop-collections = { path = "../sabshop-collections" }
sabshop-products = { path = "../sabshop-products" }
sabshop-orders = { path = "../sabshop-orders" }
sabshop-shipping-zones = { path = "../sabshop-shipping-zones" }
sabshop-storefronts = { path = "../sabshop-storefronts" }
sabshop-tax-rules = { path = "../sabshop-tax-rules" }
sabshop-themes = { path = "../sabshop-themes" }
sabsign-audit = { path = "../sabsign-audit" }
sabsign-envelopes = { path = "../sabsign-envelopes" }
sabsign-fields = { path = "../sabsign-fields" }
sabsign-templates = { path = "../sabsign-templates" }
sabvoice-agents-presence = { path = "../sabvoice-agents-presence" }
sabvoice-calls = { path = "../sabvoice-calls" }
sabvoice-dids = { path = "../sabvoice-dids" }
sabvoice-ivrs = { path = "../sabvoice-ivrs" }
sabvoice-queues = { path = "../sabvoice-queues" }
sabvoice-voicemail = { path = "../sabvoice-voicemail" }

# SabOps — endpoint / MDM / AD / patch management
sabops-endpoints = { path = "../sabops-endpoints" }
# sabops-hardware-inventory = { path = "../sabops-hardware-inventory" }
sabops-patches = { path = "../sabops-patches" }
sabops-patch-policies = { path = "../sabops-patch-policies" }
# sabops-mdm-profiles = { path = "../sabops-mdm-profiles" }
sabops-mdm-commands = { path = "../sabops-mdm-commands" }
sabops-ad-domains = { path = "../sabops-ad-domains" }
sabops-ad-users = { path = "../sabops-ad-users" }
sabops-ad-groups = { path = "../sabops-ad-groups" }
# sabops-alerts = { path = "../sabops-alerts" }
sabops-agent-tokens = { path = "../sabops-agent-tokens" }


# ─── §17: new sab-* module routers wired into the API ──────────────────
sabassist-access-tokens = { path = "../sabassist-access-tokens" }
sabassist-actions-log = { path = "../sabassist-actions-log" }
sabassist-devices = { path = "../sabassist-devices" }
sabassist-sessions = { path = "../sabassist-sessions" }
sabbackstage-orders = { path = "../sabbackstage-orders" }
sabbackstage-public-pages = { path = "../sabbackstage-public-pages" }
sabbackstage-sponsors = { path = "../sabbackstage-sponsors" }
sabbackstage-ticket-types = { path = "../sabbackstage-ticket-types" }
sabbackstage-tickets = { path = "../sabbackstage-tickets" }
sabcatalyst-api-keys = { path = "../sabcatalyst-api-keys" }
sabcatalyst-auth-sessions = { path = "../sabcatalyst-auth-sessions" }
sabcatalyst-file-store = { path = "../sabcatalyst-file-store" }
sabcatalyst-records = { path = "../sabcatalyst-records" }
sabcatalyst-usage = { path = "../sabcatalyst-usage" }
sabcheckout-ab-testing = { path = "../sabcheckout-ab-testing" }
sabcheckout-abandoned = { path = "../sabcheckout-abandoned" }
sabcheckout-affiliates = { path = "../sabcheckout-affiliates" }
sabcheckout-analytics = { path = "../sabcheckout-analytics" }
sabcheckout-api-keys = { path = "../sabcheckout-api-keys" }
sabcheckout-coupons = { path = "../sabcheckout-coupons" }
sabcheckout-custom-domains = { path = "../sabcheckout-custom-domains" }
sabcheckout-customer-portal = { path = "../sabcheckout-customer-portal" }
sabcheckout-customers = { path = "../sabcheckout-customers" }
sabcheckout-digital-watermarking = { path = "../sabcheckout-digital-watermarking" }
sabcheckout-disputes = { path = "../sabcheckout-disputes" }
sabcheckout-dunning = { path = "../sabcheckout-dunning" }
sabcheckout-fraud-prevention = { path = "../sabcheckout-fraud-prevention" }
sabcheckout-fulfillment = { path = "../sabcheckout-fulfillment" }
sabcheckout-gift-cards = { path = "../sabcheckout-gift-cards" }
sabcheckout-integrations = { path = "../sabcheckout-integrations" }
sabcheckout-inventory = { path = "../sabcheckout-inventory" }
sabcheckout-invoices = { path = "../sabcheckout-invoices" }
sabcheckout-license-keys = { path = "../sabcheckout-license-keys" }
sabcheckout-links = { path = "../sabcheckout-links" }
sabcheckout-loyalty = { path = "../sabcheckout-loyalty" }
sabcheckout-metered-billing = { path = "../sabcheckout-metered-billing" }
sabcheckout-multi-currency = { path = "../sabcheckout-multi-currency" }
sabcheckout-order-bumps = { path = "../sabcheckout-order-bumps" }
sabcheckout-pages = { path = "../sabcheckout-pages" }
sabcheckout-payment-gateways = { path = "../sabcheckout-payment-gateways" }
sabcheckout-payouts = { path = "../sabcheckout-payouts" }
sabcheckout-plans = { path = "../sabcheckout-plans" }
sabcheckout-preorders = { path = "../sabcheckout-preorders" }
sabcheckout-products = { path = "../sabcheckout-products" }
sabcheckout-reports-churn = { path = "../sabcheckout-reports-churn" }
sabcheckout-reports-mrr = { path = "../sabcheckout-reports-mrr" }
sabcheckout-reseller = { path = "../sabcheckout-reseller" }
sabcheckout-sessions = { path = "../sabcheckout-sessions" }
sabcheckout-settings = { path = "../sabcheckout-settings" }
sabcheckout-store-credit = { path = "../sabcheckout-store-credit" }
sabcheckout-subscriptions = { path = "../sabcheckout-subscriptions" }
sabcheckout-tax-exemptions = { path = "../sabcheckout-tax-exemptions" }
sabcheckout-taxes = { path = "../sabcheckout-taxes" }
sabcheckout-tiered-pricing = { path = "../sabcheckout-tiered-pricing" }
sabcheckout-upsells = { path = "../sabcheckout-upsells" }
sabcheckout-webhooks = { path = "../sabcheckout-webhooks" }
sabcliq-workspaces = { path = "../sabcliq-workspaces" }
sabcreator-apps = { path = "../sabcreator-apps" }
sabcreator-forms = { path = "../sabcreator-forms" }
sabcreator-pages = { path = "../sabcreator-pages" }
sabcreator-publishing = { path = "../sabcreator-publishing" }
sabcreator-role-assignments = { path = "../sabcreator-role-assignments" }
sabcreator-roles = { path = "../sabcreator-roles" }
sabcreator-workflows = { path = "../sabcreator-workflows" }
sablens-actions-log = { path = "../sablens-actions-log" }
sablens-annotations = { path = "../sablens-annotations" }
sablens-chat = { path = "../sablens-chat" }
sablens-devices = { path = "../sablens-devices" }
sablens-frames = { path = "../sablens-frames" }
sablens-sessions = { path = "../sablens-sessions" }
sabmail-accounts = { path = "../sabmail-accounts" }
sabmail-aliases = { path = "../sabmail-aliases" }
sabmail-domains = { path = "../sabmail-domains" }
sabmail-folders = { path = "../sabmail-folders" }
sabmail-messages = { path = "../sabmail-messages" }
sabmail-rules = { path = "../sabmail-rules" }
sabmonitor-alert-policies = { path = "../sabmonitor-alert-policies" }
sabmonitor-api-transactions = { path = "../sabmonitor-api-transactions" }
sabmonitor-check-runs = { path = "../sabmonitor-check-runs" }
sabmonitor-checks = { path = "../sabmonitor-checks" }
sabmonitor-incidents = { path = "../sabmonitor-incidents" }
sabmonitor-probes = { path = "../sabmonitor-probes" }
sabmonitor-status-page-incidents = { path = "../sabmonitor-status-page-incidents" }
sabmonitor-status-pages = { path = "../sabmonitor-status-pages" }
sabmonitor-synthetic-scripts = { path = "../sabmonitor-synthetic-scripts" }
sabmonitor-trace-spans = { path = "../sabmonitor-trace-spans" }
sabmonitor-traces = { path = "../sabmonitor-traces" }
sabnotebook-attachments = { path = "../sabnotebook-attachments" }
sabnotebook-notebooks = { path = "../sabnotebook-notebooks" }
sabnotebook-notes = { path = "../sabnotebook-notes" }
sabnotebook-sections = { path = "../sabnotebook-sections" }
sabpractice-advisory-notes = { path = "../sabpractice-advisory-notes" }
sabpractice-clients = { path = "../sabpractice-clients" }
sabpractice-deadlines = { path = "../sabpractice-deadlines" }
sabpractice-document-requests = { path = "../sabpractice-document-requests" }
sabpractice-engagements = { path = "../sabpractice-engagements" }
sabpractice-firms = { path = "../sabpractice-firms" }
sabpractice-tasks = { path = "../sabpractice-tasks" }
sabpractice-time-logs = { path = "../sabpractice-time-logs" }
sabpublish-citations = { path = "../sabpublish-citations" }
sabpublish-locations = { path = "../sabpublish-locations" }
sabpublish-posts = { path = "../sabpublish-posts" }
sabpublish-profile-fields = { path = "../sabpublish-profile-fields" }
sabpublish-providers = { path = "../sabpublish-providers" }
sabpublish-reviews = { path = "../sabpublish-reviews" }
sabpublish-sync-jobs = { path = "../sabpublish-sync-jobs" }
sabsheet-cells = { path = "../sabsheet-cells" }
sabsheet-comments = { path = "../sabsheet-comments" }
sabsheet-named-ranges = { path = "../sabsheet-named-ranges" }
sabsheet-pivot-tables = { path = "../sabsheet-pivot-tables" }
sabsheet-presence = { path = "../sabsheet-presence" }
sabsheet-sheets = { path = "../sabsheet-sheets" }
sabsheet-versions = { path = "../sabsheet-versions" }
sabsheet-workbooks = { path = "../sabsheet-workbooks" }
sabtables-automations = { path = "../sabtables-automations" }
sabtables-bases = { path = "../sabtables-bases" }
sabtables-comments = { path = "../sabtables-comments" }
sabtables-records = { path = "../sabtables-records" }
sabtables-tables = { path = "../sabtables-tables" }
sabtables-views = { path = "../sabtables-views" }
sabtables-workspaces = { path = "../sabtables-workspaces" }
sabvault-audit = { path = "../sabvault-audit" }
sabvault-folders = { path = "../sabvault-folders" }
sabvault-secrets = { path = "../sabvault-secrets" }
sabvault-shares = { path = "../sabvault-shares" }
sabwebinar-analytics = { path = "../sabwebinar-analytics" }
sabwebinar-polls = { path = "../sabwebinar-polls" }
sabwebinar-qna = { path = "../sabwebinar-qna" }
sabwebinar-registrations = { path = "../sabwebinar-registrations" }
sabwebinar-sessions = { path = "../sabwebinar-sessions" }
sabwebinar-webinars = { path = "../sabwebinar-webinars" }
sabworkerly-clients = { path = "../sabworkerly-clients" }
sabworkerly-invoices = { path = "../sabworkerly-invoices" }
sabworkerly-jobs = { path = "../sabworkerly-jobs" }
sabworkerly-payroll-runs = { path = "../sabworkerly-payroll-runs" }
sabworkerly-placements = { path = "../sabworkerly-placements" }
sabworkerly-timesheets = { path = "../sabworkerly-timesheets" }
sabworkerly-workers = { path = "../sabworkerly-workers" }
sabwriter-comments = { path = "../sabwriter-comments" }
sabwriter-documents = { path = "../sabwriter-documents" }
sabwriter-presence = { path = "../sabwriter-presence" }
sabwriter-suggestions = { path = "../sabwriter-suggestions" }
sabwriter-templates = { path = "../sabwriter-templates" }
sabwriter-versions = { path = "../sabwriter-versions" }

# sabdesk-tickets = { path = "../sabdesk-tickets" }
sabdesk-automations = { path = "../sabdesk-automations" }
sabdesk-kb = { path = "../sabdesk-kb" }
sabsprints-sprints = { path = "../sabsprints-sprints" }
sabsprints-epics = { path = "../sabsprints-epics" }
sabsprints-velocity = { path = "../sabsprints-velocity" }



sabops-mdm-profiles = { path = "../sabops-mdm-profiles" }
sabops-hardware-inventory = { path = "../sabops-hardware-inventory" }
sabops-alerts = { path = "../sabops-alerts" }

[lints]
workspace = true
