[package]
name = "crm-bills"
version = "0.1.0"
edition = "2024"
description = "Bill CRUD + lineage handlers (§2.3). Reads/writes crm-purchases-types::Bill against the `crm_bills` Mongo collection."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_bills"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mongodb = "3.2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "query"] }
tracing = "0.1"
anyhow = "1.0"

crm-core = { path = "../crm-core" }
crm-purchases-types = { path = "../crm-purchases-types" }
sabnode-auth = { path = "../auth" }
sabnode-common = { path = "../common" }
sabnode-db = { path = "../db" }

[lints]
workspace = true
