[package]
name = "crm-core"
version = "0.1.0"
edition = "2024"
description = "Cross-cutting CRM/HRM types per crm_function_plan.md §0: identity, audit, lifecycle, assignment, attribution, tags, notes, attachments, custom-fields. Composed by every CRM entity DTO via #[serde(flatten)]."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2"
sabnode-common = { path = "../common" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
